src/objects/Lecture__c.object
<CustomObject>
    <fields>
        <fullName>CourseMaster__c</fullName>
        <label>CourseMaster</label>
        <referenceTo>CourseMaster__c</referenceTo>
        <relationshipLabel>Lectures</relationshipLabel>
        <relationshipName>Lectures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Charge__c</fullName>
        <label>Course Charge</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LectureName__c</fullName>
        <label>LectureName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lecture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lecture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lectures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>